# lean-llvm

./: .gitignore  .gitmodules  CodingConventions.md  Makefile.include  README.md  leanpkg.toml
examples/: test_sort.c  test_sort.out
foreign/: foreign.lean  llvm_foreign.lean
haskell-llvm-bindings/: .gitignore  LLVMDis.hs  Makefile  reader.c
lean4_ffi/: .gitignore  README  build.sh  dump_llvm.lean  dump_llvm.sh  llvm_exports.cpp
orc_test/: .gitignore  CMakeLists.txt  Makefile  README.md  add.cpp  add.h  fib.c  jit_test.cpp  ll.cpp  main.cpp
pretty-shim/: LICENSE  cabal.project  pretty-shim.cabal
pretty-shim/src/: LeanPP.hs  Main.hs
pretty-shim/tests/: Makefile  simple.c
src/: .gitignore  AST.lean  Alignment.lean  BV.lean  DataLayout.lean  Driver.lean  LLVMCodes.lean  LLVMCodes.lean.in  LLVMFFI.lean  LLVMLib.lean  LLVMOutput.lean  Load.lean  Makefile  Makefile.include  Memory.lean  ORCTest.lean  PP.lean  Parser.lean  SimMonad.lean  Simulate.lean  TypeContext.lean  Value.lean  alias_map.lean  alignment.lean  ast.lean  bv.lean  clang_exports.cpp  clang_ffi.lean  data_layout.lean  driver.lean  jit_exports.cpp  llvm_codes.lean.in  llvm_exports.cpp  llvm_exports.h  llvm_ffi.lean  llvm_lib.lean  llvm_output.lean  memory.lean  orc_test.lean  parser.lean  (+9 more)
src/LeanLLVM/: AST.lean  Alignment.lean  DataLayout.lean  JITExports.lean  LLVMCodes.lean  LLVMFFI.lean  LLVMLib.lean  LLVMOutput.lean  Memory.lean  PP.lean  Parser.lean  SimMonad.lean  Simulate.lean  TypeContext.lean  Value.lean
src/tests/: .gitignore  test_add.lean
